--- a/main.html
+++ b/main.html
@@ -7,6 +7,29 @@
 </head>
 
 <body>
+	<table>
+		<tr>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</tr>
+		<tr>
+			<td>01</td>
+			<td>Pranav</td>
+		</tr>
+		<tr>
+			<td>02</td>
+			<td>pratik</td>
+		</tr>
+		<tr>
+			<td>03</td>
+			<td>shubham</td>
+		</tr>
+	</table>
+	<ol>
+		<li><img src="https://picsum.photos/id/123/200/300" alt=image></li>
+        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></li> 	
+        <li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></li>   	
+	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
