--- a/main.html
+++ b/main.html
@@ -25,6 +25,7 @@
 			<td>shubham</td>
 		</tr>
 	</table>
+	<h1>List of medias</h1>
 	<ol>
 		<li><img src="https://picsum.photos/id/123/200/300" alt=image></li>
         <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></li> 	
