--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 	<ol>
 		<h1>List of medias</h1>
 		<li><img src="https://picsum.photos/id/123/200/300" alt=image></li>
-        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></li> 	
+        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video.mp4" controls></li> 	
         <li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></li>   	
 	</ol>
 	<!-- the entire body must be written by student -->
