--- a/main.html
+++ b/main.html
@@ -29,8 +29,12 @@
 	<ol>
 		<h1>List of medias</h1>
 		<li><img src="https://picsum.photos/id/123/200/300" alt=image></li>
-        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video.mp4" controls></video</li> 	
-        <li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio</li>   	
+        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video.mp4" controls>
+		<source ="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">	
+		</video</li> 	
+        <li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>
+			<source ="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+		</audio</li>   	
 	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
