--- a/main.html
+++ b/main.html
@@ -8,10 +8,11 @@
 
 <body>
 	<table>
-		<tr>
+		<thead>
 			<th>Roll numbers</th>
 			<th>Names</th>
-		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>01</td>
 			<td>Pranav</td>
@@ -24,10 +25,12 @@
 			<td>03</td>
 			<td>shubham</td>
 		</tr>
+		</tbody>	
 	</table>
-	
-	<ol>
+	<div>
 		<h1>List of medias</h1>
+	<ol>
+		
 		<li><img src="https://picsum.photos/id/123/200/300" alt=image></li>
         <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video.mp4" controls>
 		<source src= "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">	
@@ -36,6 +39,7 @@
 			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
 		</audio</li>   	
 	</ol>
+	</div>	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
